<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/Login_Register"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/back" >
    
        <LinearLayout
            android:id="@+id/linearlayout1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
			
            <TextView 
                android:id="@+id/heading"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_gravity="center"
				android:gravity="center"
				android:textColor="#FFFFFF"
				android:textSize="25dp"
				android:text="@string/head"
				android:layout_marginTop="10dp" />            
            
            <TextView
                android:id="@+id/username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#FFFFFF"
                android:layout_marginTop="30dp"
                android:gravity="center"
                android:layout_gravity="center"
                android:text="@string/username"
                android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/usrinput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
        	android:layout_marginTop="20dp"  
            android:gravity="center"
            android:layout_gravity="center"
            android:ems="10"
            android:inputType="text" />

        <TextView
            android:id="@+id/password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
              android:textColor="#FFFFFF"
            android:gravity="center"
            android:layout_gravity="center"
            android:text="@string/password"
            android:layout_marginTop="20dp"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/passinput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_gravity="center"
            android:textColor="#FFFFFF"
            android:layout_marginTop="20dp"
            android:text="@string/login" />

        <Button
            android:id="@+id/register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:textColor="#FFFFFF"
            android:layout_gravity="center"
            android:text="@string/register" />

        <Button
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:textColor="#FFFFFF"
            android:layout_gravity="center"
            android:text="@string/cancel" />
        
        </LinearLayout>

</ScrollView>