<LinearLayout
    android:id="@+id/ll0"
    android:orientation="vertical"
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:background="@drawable/back" >
	
    <LinearLayout
        android:id="@+id/ll1"
   		android:orientation="horizontal" 
   		android:layout_marginTop="10dp"
   		android:layout_gravity="top"
   		android:layout_width="fill_parent"
   		android:layout_height="wrap_content" >
    
  		<TextView
    	 	android:id="@+id/textview1"
	       	android:layout_width="fill_parent"
	        android:layout_height="wrap_content"	
	        android:gravity="center" 
	        android:text=""
	        android:textColor="#FFFFFF" />
    
	</LinearLayout>
    
	<LinearLayout
	   	android:id="@+id/ll2"
	    android:orientation="horizontal"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="25dp" >
	    
	    
    <Button
        android:id="@+id/btn_play"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:text="@string/play"
        android:textColor="#FFFFFF" />

    <Button
        android:id="@+id/btn_pause"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
		android:layout_marginLeft="15dp"
        android:text="@string/pause"
        android:textColor="#FFFFFF" />

    <Button
        android:id="@+id/btn_stop"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:text="@string/stop" 
        android:textColor="#FFFFFF" />
    
	</LinearLayout>
	
	<LinearLayout
	    android:id="@+id/ll3"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginTop="20dp" 
	    android:orientation="horizontal" >
	    
	    <SeekBar
        android:id="@+id/seekBar"
        android:textColor="#FFFFFF"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center" />
	    
	</LinearLayout>
	
	<LinearLayout
	    android:id="@+id/ll4"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginTop="25dp" 
	    android:orientation="horizontal" >
	
	    <Button
	        android:id="@+id/btn_like"
	        style="@style/ButtonBarButton"
	        android:textColor="#FFFFFF"
	        android:layout_width="80dp"
	        android:layout_height="wrap_content"
	        android:drawableLeft="@drawable/like"
	        android:layout_marginLeft="40dp"
	        android:onClick="like"
	        android:text="@string/like" />
	    
	    <Button
	        android:id="@+id/btn_dislike"
	        android:textColor="#FFFFFF"
	        style="@style/ButtonBarButton"
	        android:layout_width="80dp"
	        android:layout_height="wrap_content"
	        android:drawableLeft="@drawable/dislike"
	        android:layout_marginLeft="80dp"
	        android:onClick="dislike"
	        android:text="@string/dislike" />
	    
	</LinearLayout>
	
	<LinearLayout
	    android:id="@+id/ll5"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginTop="25dp"
	    android:orientation="horizontal" >
	    	    
	   	<TextView
	        android:id="@+id/num_likes"
	        android:textColor="#FFFFFF"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="60dp" 
	        android:text="" />

    	<TextView
	        android:id="@+id/num_dislikes"
	        android:textColor="#FFFFFF"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="140dp" 
	        android:text="" />
    	
	</LinearLayout>
	
	<LinearLayout 
	    android:id="@+id/ll6"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginTop="20dp"
	    android:orientation="horizontal" >
	    
	    <Button
	        android:id="@+id/backButton"
	 		android:layout_marginLeft="115dp"
	        android:layout_width="90dp"
	        android:layout_height="wrap_content"
	        android:text="@string/back"
	        android:textColor="#FFFFFF" />
	
	</LinearLayout>
	
	
	<LinearLayout 
	    android:id="@+id/ll7"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginTop="20dp"
	    android:orientation="horizontal" >
	    
	    <Button
	        android:id="@+id/log"
	 		android:layout_marginLeft="115dp"
	        android:layout_width="90dp"
	        android:layout_height="wrap_content"
	        android:text="Logout"
	        android:textColor="#FFFFFF" />
	
	</LinearLayout>
	
	
		
</LinearLayout>